nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: demoapp
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8444
  type: ClusterIP




#The nginx-service.yaml file is used to define a Service in Kubernetes that exposes the Nginx deployment to other services or to
#external traffic. Services in Kubernetes are responsible for load balancing traffic between pods and defining how to access applications within or outside the cluster.
#Key Use Cases of nginx-service.yaml:
#Exposing Nginx Pods: The service exposes the Nginx pods internally within the cluster or externally to the internet
#(depending on the service type).
#Load Balancing: It automatically balances traffic across multiple Nginx pod replicas.
#Service Discovery: Provides a stable endpoint (IP or DNS) for clients to communicate with the Nginx pods, even if the pod IPs change.
#Common Service Types:
#ClusterIP (default): Exposes the service only within the Kubernetes cluster.
#NodePort: Exposes the service on a specific port on each node in the cluster.
#LoadBalancer: Exposes the service to external traffic using a cloud provider’s load balancer.
